debbugs (2.3-2) unstable; urgency=low

  * Tweeks to the [pkg|bug]report.cgi scripts
  * Merged README and README.Debian
  * Sundry of patchs from netgod.. see list archives for details :)
    (#36147, #39540, #39063, 

 -- Darren Benham <gecko@debian.org>  Tue, 24 Oct 1999 23:16:14 -0700

debbugs (2.3-1) unstable; urgency=low

  * Fixed the send message bug that resulted in the same words (subject)
    being printed out over and over and over again
  * Added CGI scripts to make retrieval of individual bug reports realtime
  * Created upgrade notes from 2.2 to 2.3
  * Added a variable for where the "mailsummary" reports go
  * Added optional bug archiving for expired bugs
  * Added "fixed" to the default severities
  * Some scripts are now perl -w clean.
  * Added "severity display" to "Summary of outstanding reports" 
    (db/ix/summary.html and db/ix/psummary.html)
  * Added a variable to allow for a uniformed <BODY> and starting text tag
  * Send both message that closes and original bug to bug submitter
  * Fixed X-Debbugs-CC header
  * Improved ability to skip pgp signed and mime encoded messages when
    looking for commands (control@ and request@) and pseudo headers
    (submit@)
  * Cosmetic changes...

 -- Darren Benham <gecko@debian.org>  Tue, 27 Jul 1999 11:27:22 -0700

debbugs (2.2-3) unstable; urgency=low

  * Perl Depends change

 -- Darren Benham <gecko@debian.org>  Tue, 27 Jul 1999 11:27:22 -0700

debbugs (2.2-2) unstable; urgency=low

  * Added mailtools to dependency

 -- Darren Benham <gecko@debian.org>  Thu, 13 May 1999 13:13:15 -0700

debbugs (2.2-1) unstable; urgency=low

  * NATIVE Qmail (mailer) support!  No more "other MTA" needed
  	for Qmail users!
  * Improved sendmail support.
  * Changed lynx dependancies to simply "lynx"
  * fixed bad spelling in service script (fixes #36205)

 -- Darren Benham <gecko@debian.org>  Thu,  8 Apr 1999 16:00:32 -0700

debbugs (2.1-1) unstable; urgency=low
