@@ -3,7 +3,8 @@ debbugs (2.3-2) unstable; urgency=low
   * Tweeks to the [pkg|bug]report.cgi scripts
   * Merged README and README.Debian
   * Sundry of patchs from netgod.. see list archives for details :)
-    (#36147, #39540, #39063, 
+    (#36147, #39540, #39063)
+  * Provided a CNAME in control@ as well as submit@ for severity
 
  -- Darren Benham <gecko@debian.org>  Tue, 24 Oct 1999 23:16:14 -0700
 
